# KouGouMusicLibrary

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  response.txt  response2.txt  webpack.config.js
.github/workflows/: build-windows-x86.yml  build.yml
src/js/: index.js  modulesDefinitions.js
